--- a/campo_minado.css
+++ b/campo_minado.css
@@ -8,7 +8,7 @@ header
 	background: #343B54;
 	background-image: url("background-header.png");
 	color: white;
-	height: 100px;
+	height: 50px;
 	overflow: hidden;
 	padding: 0.5em;
 	position: relative;
@@ -16,44 +16,50 @@ header
 
 nav {
 background: #343B54;
-height: 30px;
 color: white;
+height: 30px;
+padding: 0.5em;
 
 }
 
 #izquierda{
-	background: black;
+	background: white;
 	display: inline-block;
-	height: 50px;
+	height: 400px;
 	width: 700px;
+	padding-top: 10px;
 }
 
 #derecha{
 	background: grey;
-	height: 500px;
+	height: 400px;
 	display: inline-block;
-	width: 300px;	
+	padding-top: 10px;
 	position: absolute;
+	width: 300px;	
 }
 
 
 
-#panel{
-	color: white;
-	background: rgba(115, 111, 160, 0.14);
-	height: 250px;
-	display: block;
-	
-}
-#tweets{
-	color: white;
-	background: rgba(128, 0, 128, 0.14);;
-	height: 250px;
-	display: block;
-}
 
 footer{
 	color: white;
 	background-color: orange;
+	height: 50px;
+	padding-top: 10px;
+	text-align: center;
 }
 
+#body_game{
+	background-color: black;
+	height: 360px;
+	width: 400px;
+}
+
+.caja{
+	border: 2px solid blue; 
+	height: 20px;
+	width: 20px;
+	display: inline-block;
+	
+}
