--- a/campo_minado.css
+++ b/campo_minado.css
@@ -51,14 +51,16 @@ footer{
 }
 
 #body_game{
-	background-color: black;
+	background-color: white;
 	height: 360px;
 	width: 400px;
 }
 
 .caja{
 	border: 2px solid blue; 
+	border-radius: 50%; 
 	height: 20px;
+	margin-right: 1px;
 	width: 20px;
 	display: inline-block;
 	
